# analista_dados

./: main.py  pyproject.toml
sprint_10/chapter_04/: class_03.ipynb  class_04.ipynb  class_05.ipynb
sprint_10/projeto/: sprint10_projeto.ipynb
