[project]
name = "analista-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "jupyterlab>=4.4.9",
    "plotly>=6.3.1",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "notebook>=7.4.7",
]
